--- a/O'zbekistan Hotel/HomePage/sass/about.scss
+++ b/O'zbekistan Hotel/HomePage/sass/about.scss
@@ -2,11 +2,11 @@
   font-family: "Segoe UI", sans-serif;
   transition: all 1s;
   &_items {
-    border: 1px solid green;
+    // border: 1px solid green;
     padding: 30px 0px 0px 100px;
 
     &_uzbHotel {
-      border: 1px solid gold;
+      // border: 1px solid gold;
       width: 716px;
       &_title {
         h2 {
