--- a/O'zbekistan Hotel/HomePage/sass/_general.scss
+++ b/O'zbekistan Hotel/HomePage/sass/_general.scss
@@ -11,7 +11,7 @@
 .container {
   max-width: 1360px;
   padding: 0px 15px;
-  border: 1px solid red;
+  // border: 1px solid red;
   margin: 0 auto;
 }
 
